solved attribution visibility issue

--- a/res/css/custom.css
+++ b/res/css/custom.css
@@ -1,4 +1,10 @@
-.bkg {
+/*@media all and (min-width: 850px) {
+    .footer-content {
+        padding-top: 1vh;
+    }
+}*/
+
+body {
     background-color: #004C00;
 }
 
@@ -20,7 +26,7 @@
 .map-wrapper {
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 78vh;
     display: flex;
 }
 
@@ -31,7 +37,6 @@
     height: 5vh;
 }
 .footer-content {
-    padding-top: 1vh;
     text-align: center;
     font-size: 15px;
     color: #ffcc00ff;
